[package]
name = "tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
colored = "2.0.0"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.7.3"
serde = { version = "1.0", features = ["derive"] }

[profile.perf]
opt-level = 3
inherits = "release"
debug = true
