[package]
name = "tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
colored = "2.0.0"
rand = {version = "0.8.5", features = ["small_rng"]}
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

[profile.perf]
opt-level = 3
inherits = "release"
debug = true
