[package]
name = "tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
colored = "2.0.0"
inquire = "0.6.1"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
num-integer = "0.1"
itertools = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.perf]
opt-level = 3
inherits = "release"
debug = true
